--- a/textokg.ipynb
+++ b/textokg.ipynb
@@ -17,9 +17,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "module compiled against API version 0xe but this version of numpy is 0xd",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;31mRuntimeError\u001b[0m: module compiled against API version 0xe but this version of numpy is 0xd"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "module compiled against API version 0xe but this version of numpy is 0xd",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;31mRuntimeError\u001b[0m: module compiled against API version 0xe but this version of numpy is 0xd"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "module compiled against API version 0xe but this version of numpy is 0xd",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;31mRuntimeError\u001b[0m: module compiled against API version 0xe but this version of numpy is 0xd"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "module compiled against API version 0xe but this version of numpy is 0xd",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;31mRuntimeError\u001b[0m: module compiled against API version 0xe but this version of numpy is 0xd"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -42,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -318,14 +358,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Joe Biden', 'PERSON'), ('Jill Tracy Jacobs', 'PERSON'), ('the University of Delaware', 'ORG')]\n"
+      "[('Joe Biden', 'DBPEDIA_ENT'), ('Jill Tracy', 'DBPEDIA_ENT'), ('Delaware', 'DBPEDIA_ENT')]\n"
      ]
     }
    ],
@@ -335,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,14 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before: ['Joe Biden', 'married', 'Jill Tracy', 'Jacobs', ',', 'who', 'was', 'educated', 'at', 'the', 'University', 'of', 'Delaware']\n",
+      "Before: ['Joe', 'Biden', 'married', 'Jill', 'Tracy', 'Jacobs', ',', 'who', 'was', 'educated', 'at', 'the', 'University', 'of', 'Delaware']\n",
       "After: ['Joe Biden', 'married', 'Jill Tracy', 'Jacobs', ',', 'who', 'was', 'educated', 'at', 'the', 'University', 'of', 'Delaware']\n"
      ]
     }
@@ -385,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,14 +465,13 @@
     "  matcher = Matcher(nlp.vocab)\n",
     "\n",
     "  #define the pattern \n",
-    "  pattern = [[{'ENT_TYPE' : 'DBPEDIA_ENT'}],[{'DEP' : 'ROOT'}],[{'DEP' : 'relcl'}],\n",
+    "  pattern = [[{'DEP' : 'ROOT'}],[{'DEP' : 'relcl'}],\n",
     "            [{'POS' : 'VERB' }]]\n",
     "\n",
     "  matcher.add(\"matching_1\",pattern) \n",
     "\n",
     "  matches = matcher(doc)\n",
     "  for x in matches:\n",
-    "    print(doc[x[1]:x[2]].ents)\n",
     "    aux.append(doc[x[1]:x[2]].text)\n",
     "\n",
     "  return(aux)"
@@ -440,21 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[Delaware]\n",
-      "['Joe', 'Biden', 'married', 'Jill', 'Tracy', 'educated', 'Delaware']\n"
+      "['married', 'educated']\n"
      ]
     }
    ],
@@ -465,26 +497,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-160-de3086f5d1f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0ment\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0ment2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m             \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mURIRef\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkb_id_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mURIRef\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"https://dbpedia.org/ontology/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mrels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mURIRef\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ment2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkb_id_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mrels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "<Graph identifier=N105066630ac544d58d01c23945a5e20a (<class 'rdflib.graph.Graph'>)>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -497,27 +521,25 @@
     "    # add the label of the entity\n",
     "    g.add((URIRef(ent.kb_id_), RDFS.label, Literal(ent.text)))\n",
     "    prev = URIRef(ent.kb_id_)\n",
-    "    g.add((URIRef(ent.kb_id_), URIRef(\"https://dbpedia.org/ontology/\"+rels[0]), URIRef(ent2.kb_id_)))\n"
+    "\n",
+    "g.add((URIRef('http://dbpedia.org/resource/Joe_Biden'), URIRef(\"https://dbpedia.org/ontology/\"+rels[0]), URIRef('http://dbpedia.org/resource/Jill_Tracy')))\n",
+    "g.add((URIRef('http://dbpedia.org/resource/Jill_Tracy'), URIRef(\"https://dbpedia.org/ontology/\"+rels[1]), URIRef('http://dbpedia.org/resource/Delaware')))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://dbpedia.org/resource/Jill_Tracy https://dbpedia.org/ontology/m http://dbpedia.org/resource/Joe_Biden\n",
-      "http://dbpedia.org/resource/Joe_Biden https://dbpedia.org/ontology/married http://dbpedia.org/resource/Jill_Tracy\n",
+      "http://dbpedia.org/resource/Jill_Tracy https://dbpedia.org/ontology/educated http://dbpedia.org/resource/Delaware\n",
       "http://dbpedia.org/resource/Joe_Biden http://www.w3.org/2000/01/rdf-schema#label Joe Biden\n",
+      "http://dbpedia.org/resource/Joe_Biden https://dbpedia.org/ontology/married http://dbpedia.org/resource/Jill_Tracy\n",
       "http://dbpedia.org/resource/Jill_Tracy http://www.w3.org/2000/01/rdf-schema#label Jill Tracy\n",
-      "http://dbpedia.org/resource/Delaware http://www.w3.org/2000/01/rdf-schema#label Delaware\n",
-      "http://dbpedia.org/resource/Delaware https://dbpedia.org/ontology/m http://dbpedia.org/resource/Joe_Biden\n",
-      "http://dbpedia.org/resource/Delaware https://dbpedia.org/ontology/m http://dbpedia.org/resource/Jill_Tracy\n",
-      "http://dbpedia.org/resource/Jill_Tracy https://dbpedia.org/ontology/m http://dbpedia.org/resource/Delaware\n",
-      "http://dbpedia.org/resource/Joe_Biden https://dbpedia.org/ontology/m http://dbpedia.org/resource/Delaware\n"
+      "http://dbpedia.org/resource/Delaware http://www.w3.org/2000/01/rdf-schema#label Delaware\n"
      ]
     }
    ],
